feature/subscription: stripe integration

--- a/.env.example
+++ b/.env.example
@@ -101,6 +101,12 @@ STRIPE_WEBHOOK_SECRET=
 STRIPE_PRO_PLAN_PRODUCT_ID=
 STRIPE_PREMIUM_PLAN_PRODUCT_ID=
 STRIPE_FREE_PLAN_PRODUCT_ID=
+STRIPE_MONTLY_PLAN_PRODUCT_ID=
+STRIPE_YEARLY_PLAN_PRODUCT_ID=
+
+#Stripe
+NEXT_PUBLIC_STRIPE_P_KEY=
+STRIPE_S_KEY=
 
 # Use for internal Public API Keys and optional
 API_KEY_PREFIX=cal_
