--- a/turbo.json
+++ b/turbo.json
@@ -234,6 +234,10 @@
     "$STRIPE_CLIENT_ID",
     "$STRIPE_PRIVATE_KEY",
     "$STRIPE_WEBHOOK_SECRET",
+    "$STRIPE_MONTLY_PLAN_PRODUCT_ID",
+    "$STRIPE_YEARLY_PLAN_PRODUCT_ID",
+    "$NEXT_PUBLIC_STRIPE_P_KEY",
+    "$STRIPE_S_KEY",
     "$TELEMETRY_DEBUG",
     "$VERCEL_ENV",
     "$VERCEL_URL",
